--- a/code.html
+++ b/code.html
@@ -1,4 +1,4 @@
-1<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
-    <h3>this is a heading tag</h3>
+    <h1>welcome</h1>
 </body>
 </html>
